src/scss/theme/dark/popup.scss
@import "~scss/_vars";
@import "~scss/theme/dark/_vars";

.popups {
    /* Common */

    .popup {
        .innerWrap { background: $colorBlack; border: 0.5px solid #4C4B43; }

        #loader { background: $colorBlack; }
    }

    /* PopupSearch */

    .popup.popupSearch {
        .head { border-color: $colorLineSecondary; }
        .item {
            .descr { color: $colorSecondary; }
        }
        .item.active { background-color: $colorHoverMedium; }
    }

    /* PopupSettings */

    .popup.popupSettings {
		
		.sides {
			> .side.left { background: $colorBgLight; }
			> .side.left {
				.space:hover, .space.active { background: $colorHoverMedium; }
				.item:hover, .item.active { background: $colorHoverMedium; }

				.iconObject.withLetter { background-color: $colorBgIcon; }
			}

			> .side.right {
				.head { background: $colorBlack; }
				.head {
					.element:hover { background-color: $colorHoverMedium; }
				}

				.label.section, .label.small, .label.grey { color: $colorSecondary; }
				.row { border-color: $colorLineSecondary; }

				.input { border-color: $colorLinePrimary; }

				.select { color: $colorSecondary; }
				.select:hover { background-color: $colorHoverMedium; }
			}

		}

		.side.right.tabSpaceIndex {
			.sections .section.sectionSpaceManager .sectionContent .item {
				.progressBar .fill { background: $colorOrange; }
			}
			.sections .section.sectionSpaceManager .sectionContent .item.red {
				.progressBar .fill { background: $colorRed; }
			}
		}

        .side.right.tabPhrase {
            .qrWrap { background: $colorMediumGrey; }
			.textareaWrap { background-color: $colorBgLight; }
        }

		.side.right.tabPersonal {
			.select .item { color: $colorPrimary; }
		}

        .side.right.tabImportIndex, 
		.side.right.tabExportIndex {
            .item { border-color: $colorLineSecondary; }
            .item:hover, .item.active { border-color: $colorLinePrimary; }
            .item.notion .icon { background-image: url('#{$themePath}/icon/import/notion.svg'); }
            .item.roam .icon { background-image: url('#{$themePath}/icon/import/roam.svg'); }
        }

		.side.right.tabImportNotion {
			.btn { color: $colorSecondary; }
			.btn {
				.icon.help { background-image: url('#{$themePath}/icon/popup/settings/help0.svg'); }
			}
			.btn:hover { color: $colorPrimary; }
			.btn:hover {
				.icon.help { background-image: url('#{$themePath}/icon/popup/settings/help1.svg'); }
			}
		}

		.side.right.tabImportNotion, 
		.side.right.tabImportNotionHelp {
			.icon.logo { background-image: url('#{$themePath}/icon/import/notion.svg'); }
		}

		.side.right.tabImportNotionHelp {
			.list img { border-color: $colorLinePrimary; }
		}

		.side.right.tabAppearance {
			.btn { color: $colorSecondary; }

			.btn.light { 
				.bg { background-color: $colorWhite; }
			}

			.btn.dark {
				.bg { box-shadow: 0px 0px 0px 1px $colorLinePrimary; }
				.icon { background-image: url('~img/icon/popup/settings/theme/dark.svg'); }
			}
			.btn.system {
				.bg::before, .bg::after {
					content: ''; position: absolute; top: 0px; width: 50%; height: 100%;
				}
				.bg::before { left: 0px; background: $colorWhite; border-radius: 14px 0px 0px 14px; }
				.bg::after { right: 0px; box-shadow: 0px 0px 0px 1px $colorLinePrimary; border-radius: 0px 14px 14px 0px; }
				.icon { background-image: url('~img/icon/popup/settings/theme/system.svg'); }
			}

			.btn.active { color: $colorPrimary; }
			.btn.active {
				.bg { box-shadow: 0px 0px 0px 2px #ffee94; }
			}
			.btn.system.active {
				.bg::before { box-shadow: 0px 0px; }
			}
		}

		.side.right.tabDelete {
			.check { border-color: $colorLinePrimary; }
		}
    }
    
    /* PopupShortcuts */

    .popup.popupShortcut {
        .head {
            .tabs { color: $colorSecondary; }
            .tabs {
                .item:hover, .item.active { color: $colorPrimary; }
            }
        }

        .body {
            .section {
                .name { border-color: $colorLineSecondary; }
                .items {
                    .item { border-color: $colorLineSecondary; }
                    .item {
                        .key { color: $colorSecondary; }
                    }
                }
            }
            .section > .descr { border-color: $colorLineSecondary; }
        }
    }

	/* PopupPreview */

	.popup.popupPreview {
		#loader { background: $colorBlack; }
	}

    /* PopupHelp */

    .popup.popupHelp {
		.head { color: $colorSecondary; }
		.head {
			.icon.telegram { background-image: url('#{$themePath}/icon/social/telegram0.svg'); }
			.icon.telegram:hover { background-image: url('#{$themePath}/icon/social/telegram1.svg'); }

			.icon.twitter { background-image: url('#{$themePath}/icon/social/twitter0.svg'); }
			.icon.twitter:hover { background-image: url('#{$themePath}/icon/social/twitter1.svg'); }
		}

        .highlight { color: $colorOrange; background: $colorHoverMedium; }
	}

    /* PopupPrompt */

    .popup.popupPrompt {
        .input { background: $colorBlack; border-color: $colorLinePrimary; }
    }

    /* PopupExport */

    .popup.popupExport {
        .row { border-color: $colorLinePrimary; }
    }

	/* PopupMigration */

	.popup.popupMigration {
		.qrWrap { background-color: $colorBgLight; }
	}

}

